Wed Feb 29 16:30:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
          Allow VM_TRUNCATABLE to be recorded in the typecode.

        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:
          Stop the Any insertion of Valuetypes setting the any typecode to
          the fully derived type. This was stopping the value from being
          extracted (as the tc was wrong at extraction, or the embedded
          Any_Impl_T<base *> class wouldn't dynamic_cast to the Any_Impl_T<derived *>.

        * tao/AnyTypeCode/Amy_Impl.cpp:
          When marshaling the any, If it is holding a valueType, send the
          fully derived typecode of the type being held instead of the
          Any embedded typecode. This effectivly takes over from the change
          to Any insertion above. (The value of the valuetype is always
          sent as the fully derived type, so the typecode must match what is
          actually sent.) This allows CORBA::Anys to hold a base pointer to
          a derived valuetype and marshal it correctly whilst still allowing
          the user to manipulate the value in the Any without locking
          themselves out!

        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp:
          Add debug output to a silent Marshaling exception.

        * tao/AnyTypeCode/append.cpp:
        * tao/AnyTypeCode/skip.cpp:
          The code for value/event types needed to recognise ValueBox types
          and behave slightly differently.

        * tao/AnyTypeCode/typecode.cpp:
          Tidy up of code.

        * tao/Valuetype/ValueBase.h:
        * tao/Valuetype/ValueBase.cpp:
          Add quite a lot of extra debug output during error cases.
          Fix some CDR alignment bugs with indirection.
          Added missing _copy_value () virtual call.
          Split _tao_unmarshal_pre() into two sub functions
          _tao_unmarshal_header () and _tao_unmarshal_find_factory().